syntax = "proto3";

// User message

message UserInfo {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  uint32 status = 4;
  string username = 5;
  string password = 6;
  string nickname = 7;
  string description = 8;
  string home_path = 9;
  uint64 role_id = 10;
  string mobile = 11;
  string email = 12;
  string avatar = 13;
  uint64 department_id = 14;
  uint64 position_id = 15;
  string role_name = 16;
  string role_value = 17;
}

message UserListResp {
  uint64 total = 1;
  repeated UserInfo data = 2;
}

message UserListReq {
  uint64 page = 1;
  uint64 page_size = 2;
  string username = 3;
  string nickname = 4;
  string email = 5;
  string mobile = 6;
  uint64 role_id = 7;
  uint64 department_id = 8;
  uint64 position_id = 9;
}

message UpdateProfileReq {
  string id = 1;
  string nickname = 2;
  string email = 3;
  string mobile = 4;
  string avatar = 5;
  string description = 6;
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  string id = 1;
  string role_name = 2;
  string role_value = 3;
  uint64 role_id = 4;
}


service Core {
  // User management
  // group: user
  rpc createUser (UserInfo) returns (BaseResp);
  // group: user
  rpc updateUser (UserInfo) returns (BaseResp);
  // group: user
  rpc getUserList (UserListReq) returns (UserListResp);
  // group: user
  rpc getUserById (UUIDReq) returns (UserInfo);
  // group: user
  rpc deleteUser (UUIDsReq) returns (BaseResp);
  // group: user
  rpc login(LoginReq) returns (LoginResp);
}